--- a/hw03/hw03-hyeongcheol-park.Rmd
+++ b/hw03/hw03-hyeongcheol-park.Rmd
@@ -188,6 +188,6 @@ gapminder %>%
  The most difficult thing was that I would like to make a chart of "how many countries people die early" without overlapping same years five times for each continent. I tried to do it but I gave up to find the solution. 
   And It seems that I am getting use to using %>% function. It was not fully free for me to analize whatever I want to try, but I think I am getting better for that.
   However, honestly, I still don't know well how to decorate plots  changing axis, scale, and so on. So I skipped many of that in my assignment3.
-  Helpful tutorial was absolutely the lecture note, [here](https://stat545.com/cm007-notes_and_exercises.html). And I searched some [blog](http://www.dodomira.com/2016/03/18/ggplot2-기초/), which was more readable for me, while I don't think it will be helpful to others.
+  Helpful tutorial was absolutely the lecture note, [here](https://stat545.com/cm007-notes_and_exercises.html). And I searched some [blog](http://www.dodomira.com/2016/03/18/ggplot2-기초/), which was more readable for me, while I don't think it will be helpful to others. Moreover, my peer review was helpful! here it comes HeatherSummer's homework2 [HeatherSummers](https://github.com/heathersummers/STAT545-hw-Summers-Heather/blob/master/hw02/hw02.md)
 
 
