--- a/Hw04/hw04.md
+++ b/Hw04/hw04.md
@@ -24,7 +24,7 @@ tom
 <td><code>## filter(): dplyr, stats ## lag():    dplyr, stats</code></td>
 </tr>
 <tr class="even">
-<td><code>r library(gapminder) knitr::opts_chunk$set(echo = TRUE)</code></td>
+<td><code>r library(gapminder)</code></td>
 </tr>
 <tr class="odd">
 <td>##spread, gather</td>
