--- a/Hw05/hw05.Rmd
+++ b/Hw05/hw05.Rmd
@@ -262,9 +262,9 @@ ggsave("myplot.bmp", g2, width = 12, height = 6)
 ggsave("myplot.png", g2, width = 12, height = 6)
 ```
 
-![pdf](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.pdf)
-![bmp](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.bmp)
-![png](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.png)
+[pdf](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.pdf)
+[bmp](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.bmp)
+[png](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.png)
 
 
 
