--- a/Hw05/hw05.md
+++ b/Hw05/hw05.md
@@ -362,4 +362,4 @@ ggsave("myplot.bmp", g2, width = 12, height = 6)
 ggsave("myplot.png", g2, width = 12, height = 6)
 ```
 
-[pdf](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.pdf) [bmp](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.bmp) [png](/Users/hyeongcheolpark/monk/STAT545-hw02-Hyeongcheol-Park/STAT545-hw-Hyeongcheol-Park/Hw05/myplot.png)
+[pdf](https://github.com/aiod01/STAT545-hw-Hyeongcheol-Park/blob/master/Hw05/myplot.pdf) [bmp](https://github.com/aiod01/STAT545-hw-Hyeongcheol-Park/blob/master/Hw05/myplot.bmp) [png](https://github.com/aiod01/STAT545-hw-Hyeongcheol-Park/blob/master/Hw05/myplot.png)
